Fixing tex document

--- a/readmeTex/lab_report_1.tex
+++ b/readmeTex/lab_report_1.tex
@@ -5,7 +5,8 @@
 \renewcommand{\labelenumi}{\alph{enumi}.} % Make numbering in the enumerate environment by letter rather than number (e.g. section 6)
 
 \usepackage{times} % Uncomment to use the Times New Roman font
-
+\usepackage{listings}
+\usepackage{color}
 %----------------------------------------------------------------------------------------
 %	DOCUMENT INFORMATION
 %----------------------------------------------------------------------------------------
